# Gomoku

./: CMakeLists.txt
cuda/: CMakeLists.txt  gpu_match.cu  gpu_match.cuh  heuristic_moves.cu  heuristic_moves.cuh
include/: Board.h  HeuristicMinMaxStrategy.h  HumanStrategy.h  MinMaxStrategy.h  ParallelHeuristicMinMax.h  Player.h  RandomStrategy.h  Strategy.h  TestMethods.h  pattern_search.h
src/: Board.cpp  HeuristicMinMaxStrategy.cpp  HumanStrategy.cpp  MinMaxStrategy.cpp  ParallelHeuristicMinMax.cpp  Player.cpp  RandomStrategy.cpp  Strategy.cpp
test/: test_board.cpp  test_game.cpp  test_main.cpp  test_score.cpp  test_search.cpp
utils/: gpu_match.cu  pattern_search.cpp
